#CmakeLists.txt

#PROJECT(async_test C CXX)

SET(SRC_LIST main.cpp)

#MESSAGE(STATUS "This is BINARY dir" ${async_test_BINARY_DIR})
MESSAGE(STATUS "BINARY dir:" ${PROJECT_BINARY_DIR})

#MESSAGE(STATUS "This is SOURCE dir" ${async_test_SOURCE_DIR})
MESSAGE(STATUS "SOURCE dir:" ${PROJECT_SOURCE_DIR})

MESSAGE(STATUS "EXECUTABLE dir:" ${EXECUTABLE_OUTPUT_PATH})

MESSAGE(STATUS "LIBRARY dir:" ${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(async.elf ${SRC_LIST})

