SET(SRC_LIST server_epoll.cpp)
SET(CMAKE_CXX_STANDARD 11)

#在cmake命令过程中增加打印
MESSAGE(STATUS "BINARY dir:" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "SOURCE dir:" ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "EXECUTABLE dir:" ${EXECUTABLE_OUTPUT_PATH})
MESSAGE(STATUS "LIBRARY dir:" ${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(server_epoll ${SRC_LIST})
