SET(SRC_LIST main.cpp)
SET(CMAKE_CXX_STANDARD 11)

#在cmake命令过程中增加打印
MESSAGE(STATUS "BINARY dir:" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "SOURCE dir:" ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "EXECUTABLE dir:" ${EXECUTABLE_OUTPUT_PATH})
MESSAGE(STATUS "LIBRARY dir:" ${LIBRARY_OUTPUT_PATH})

# 指定输出可执行文件名和编译文件列表
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})
