ADD_SUBDIRECTORY(googletest EXCLUDE_FROM_ALL)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../code/include)

AUX_SOURCE_DIRECTORY(. SOURCE)
ADD_COMPILE_OPTIONS("-g")

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../build)
SET(EXECUTABLE_NAME code_test)

ADD_EXECUTABLE(${EXECUTABLE_NAME} ${SOURCE})
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} code-source)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} gmock)
